 * fix oclHashcat-plus execution on 32bit win
 * make possible to run multiple times
   from the same dir with different crack tools
 * renice(10) when using CPU crackers
 * possibility to show changelog on update

ver 0.5.1 / 10 Nov 2011
 * fix priority setting

ver 0.5.2 / 18 Nov 2011
 * fix oclHashcat-plus support. Thanks to Michael Sprecher

ver 0.6 / 26 Nov 2011
 * upgrade for the new API
 * remove functionality to use your own dicts
 * remove dead code

ver 0.7 / 29 Dec 2011
 * upgrade for the new API (again)
 * added bssid filter again
 * some pylint fixes

ver 0.7.1 / 1 Feb 2012
 * repeat last job if stopped prematurely
 * general and pylint fixes

ver 0.7.2 / 10 Feb 2012
 * do not exit on bad response, it may be a temp problem

ver 0.7.3 / 12 Mar 2012
 * fix search for oclHashcat-plus binaries on unix
 * return right result when get_work_wl() fails

ver 0.8 / 28 Aug 2013
 * massive rewrite
 * new API to DWPA
 * reduced number of requests
 * add Hashcat support
 * better handling of return codes in oclHashcat-plus
 * try to run Hashcat* to check if they work (OpenCL/CUDA)
 * no need for aircrack-ng to generate hccap files

ver 0.8.1 / 10 Sep 2013
 * new API to DWPA (again)
 * resume from cap to hccap and viceversa
 * don't try to read resume 
 * don't break on dict hash change

ver 0.8.2 / 11 Sep 2013
 * avoid endless loop on DWPA/connection fails
 * accept requests for rule engine usage

ver 0.8.3 / 29 Dec 2013
 * added support for oclHashcat

ver 0.8.4 / 19 Jan 2014
 * drop support for oclHashcat-plus
 * fix hashcat-cli on 32bit (thanks Vanetz)
 * Fix hashcat output format for proper submission

ver 0.8.5 / 21 Sep 2014
 * add a simple challenge before requesting work

ver 0.8.6 / 1 Dec 2015
 * oclHashcat: workload tune to performance (-w 3)
 * ocl/Hashcat: do not write potfile, so we can crack
   the challenge successfully
 * change challange hccap keyver to be more compliant

ver 0.8.7 / x x 2016
 * implement buffered dictionary extraction